--- a/cn.zh-CN/产品公告/【新】解析器正式计费通知.md
+++ b/cn.zh-CN/产品公告/【新】解析器正式计费通知.md
@@ -13,10 +13,10 @@
 
 
 
-|       计费项        |    计费价格    |
-|------------------|------------|
-| 出站终端节点源IP地址      | 1元/个/小时    |
-| 出站终端节点转发的DNS请求数量 | 0.03元/元/万次 |
+|       计费项        |   计费价格   |
+|------------------|----------|
+| 出站终端节点源IP地址      | 1元/个/小时  |
+| 出站终端节点转发的DNS请求数量 | 0.03元/万次 |
 
 
 
