--- a/cn.zh-CN/产品简介/产品定价.md
+++ b/cn.zh-CN/产品简介/产品定价.md
@@ -13,12 +13,12 @@
 
 
 
-|       计费费项       |   计费标准   |                                  计费说明                                  |
-|------------------|----------|------------------------------------------------------------------------|
-| Zone数量           | 0.1元/个   | 同一个账号下每个Zone每日收取 0.1元                                                  |
-| Zone请求量          | 0.03元/万次 | 同一个账号下每万次的DNS回源（TTL到期）查询每日收取 0.03元                                     |
-| 出站终端节点源IP地址      | 1元/个/小时  | 同一个账号下每个出站终端节点源IP每小时收取1元 同一个账号下每个出站终端节点源IP每小时收取0.15USD |
-| 出站终端节点转发的DNS请求数量 | 0.03元/万次 | 同一个账号下出站终端节点共转发DNS请求每万次收取0.03元                                         |
+|       计费费项       |   计费标准   |                计费说明                |
+|------------------|----------|------------------------------------|
+| Zone数量           | 0.1元/个   | 同一个账号下每个Zone每日收取 0.1元              |
+| Zone请求量          | 0.03元/万次 | 同一个账号下每万次的DNS回源（TTL到期）查询每日收取 0.03元 |
+| 出站终端节点源IP地址      | 1元/个/小时  | 同一个账号下每个出站终端节点源IP每小时收取1元           |
+| 出站终端节点转发的DNS请求数量 | 0.03元/万次 | 同一个账号下出站终端节点共转发DNS请求每万次收取0.03元     |
 
 
 
